--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   color: #fff;
 }
 
-.list{
+.list {
   display: flex;
   align-items: center;
   list-style: none;
@@ -21,4 +21,10 @@ body {
   margin-right: 20px;
   font-weight: 500;
   cursor: pointer;
+}
+
+.avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
 }
