--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,9 @@ body {
 .card {
   width: 30%;
   padding: 10px;
+  border-radius: 20px;
+  -webkit-box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.36);
+  box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.36);
 }
 
 .card-title {
