--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,22 @@ body {
 
 .card-img {
   width: 100%;
+  height: 200px;
+  object-fit: cover;
+  margin: 20px 0;
 }
 .card-desc {
+  color: blue;
+  margin-bottom: 20px;
+  line-height: 20px;
 }
 
 .card-button {
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(0, 88, 52);
+  padding: 10px;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
 }
