--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ body {
 .card-button {
   border: none;
   border-radius: 10px;
-  background-color: rgb(0, 88, 52);
+  background-color: rgba(0, 88, 51, 0.918);
   padding: 10px;
   color: #fff;
   font-weight: 500;
