--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
 }
 
-/* Navbar */
+/* Navbar Component*/
 
 .navbar {
   display: flex;
@@ -37,7 +37,7 @@ body {
   object-fit: cover;
 }
 
-/* Card */
+/* Card Component*/
 
 .home {
   display: flex;
@@ -77,4 +77,37 @@ body {
   color: #fff;
   font-weight: 500;
   cursor: pointer;
+}
+
+/* Post Page*/
+
+.post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post-img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
+
+.post-title {
+}
+
+.post-desc {
+  padding: 0 100px;
+  font-size: 24px;
+  font-weight: 300;
+  color: grey;
+  margin-top: 40px;
+}
+
+.post-long-desc {
+  padding: 100px;
+  padding-top: 50px;
+  font-size: 18px;
+  line-height: 24px;
 }
