styling login page

--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,32 @@ body {
   font-size: 18px;
   line-height: 24px;
 }
+
+/* Login Page */
+
+.login {
+  
+}
+
+.login-title {
+}
+
+.wrapper {
+}
+
+
+/* Left Login Page */
+.left {
+}
+
+.login-button facebook {
+}
+
+.login-button github {
+}
+
+.login-button google {
+}
+
+
+/* Right Login Page */
