--- a/src/App.css
+++ b/src/App.css
@@ -54,9 +54,6 @@ body {
   box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.36);
 }
 
-.card-title {
-}
-
 .card-img {
   width: 100%;
   height: 200px;
@@ -94,9 +91,6 @@ body {
   margin-bottom: 20px;
 }
 
-.post-title {
-}
-
 .post-desc {
   padding: 0 100px;
   font-size: 24px;
@@ -115,7 +109,10 @@ body {
 /* Login Page */
 
 .login {
-  
+  height: calc(100vh - 50px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-title {
