--- a/src/App.css
+++ b/src/App.css
@@ -119,8 +119,11 @@ body {
 }
 
 .wrapper {
+  width: 60%;
+  height: 75%;
+  -webkit-box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.36);
+  box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.36);
 }
-
 
 /* Left Login Page */
 .left {
@@ -134,6 +137,5 @@ body {
 
 .login-button google {
 }
-
 
 /* Right Login Page */
