--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,9 @@ body {
   height: 75%;
   -webkit-box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.36);
   box-shadow: 6px 5px 12px -3px rgba(0, 0, 0, 0.36);
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
 }
 
 /* Left Login Page */
