--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,11 @@ body {
 }
 
 /* Left Login Page */
-.left {
+.left, .right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .login-button facebook {
