styling login page

--- a/src/App.css
+++ b/src/App.css
@@ -145,4 +145,13 @@ body {
 .login-button google {
 }
 
+/* Center Login Page */
+
+.center {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Right Login Page */
