--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,8 @@ body {
 }
 
 /* Left Login Page */
-.left, .right {
+.left,
+.right {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -152,6 +153,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.or {
+  border: 2px solid lightgray;
+  border-radius: 50%;
+  padding: 10px;
 }
 
 /* Right Login Page */
