--- a/src/App.css
+++ b/src/App.css
@@ -137,13 +137,22 @@ body {
   align-items: center;
 }
 
-.login-button facebook {
+.login-button {
+  width: 80px;
+  padding: 15px 25px;
+  border-radius: 5px;
+  color: #fff;
 }
 
-.login-button github {
+.facebook {
+  background-color: #4867aa;
 }
 
-.login-button google {
+.github {
+}
+
+.google {
+  background-color: #df4930;
 }
 
 /* Center Login Page */
