--- a/src/App.css
+++ b/src/App.css
@@ -138,10 +138,14 @@ body {
 }
 
 .login-button {
-  width: 80px;
+  width: 100px;
   padding: 15px 25px;
   border-radius: 5px;
   color: #fff;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .facebook {
@@ -149,6 +153,7 @@ body {
 }
 
 .github {
+  background-color: black;
 }
 
 .google {
